appId: com.reactnativelegalbareexample
name: '[Android] Check React Native entry in custom OSS libraries list'
tags:
  - pull-request
  - android
---
- launchApp:
    clearState: true
    stopApp: true
- startRecording: 'e2e_results/checkLicenses-getLicences'
- tapOn: 'Tap to get list of licenses'
- assertVisible: 'EXIT LIST'
- swipe:
    start: 50%, 90%
    end: 50%, 0%
- scrollUntilVisible:
    element:
      containsChild: '@react-native/virtualized-lists'
      index: 0
    direction: 'DOWN'
    timeout: 60000
    centerElement: false
    speed: 75
    visibilityPercentage: 75
- takeScreenshot: 'e2e_results/getLicenses-react-native_list_element'
- assertVisible:
    text: '@react-native/virtualized-lists'
    index: 0
- tapOn:
    text: '@react-native/virtualized-lists'
    index: 0
- takeScreenshot: 'e2e_results/getLicenses-license_modal'
- assertVisible: 'EXIT DETAIL VIEW'
- assertVisible: '.*MIT License.*'
- assertVisible: '.*Copyright \(c\).*'
- assertVisible: '.*Permission is hereby granted, free of charge.*'
- tapOn: 'EXIT DETAIL VIEW'
- takeScreenshot: 'e2e_results/getLicenses-react-native_back_to_list'
- assertVisible: 'EXIT LIST'
- tapOn: 'EXIT LIST'
- stopRecording
- killApp
